# test

./: README.md  pyproject.toml
data/: names.txt
src/: processing.py  utils.py
