[project]
name = "test"
version = "0.1.0"
description = ""
authors = [
    {name = "Pavel Oleynikov",email = "Pavlushka19805@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
